@@ -9,19 +9,14 @@ int test_ehht_new()
 {
 	int failures = 0;
 	struct ehht_s *table;
-	size_t num_buckets = 35;
 
-	/* msg = "test_ehht_new"; */
-	table = ehht_new_custom(num_buckets, NULL, NULL, NULL, NULL);
+	table = ehht_new();
 
 	if (table == NULL) {
 		++failures;
 	}
 
 	failures += check_unsigned_int_m(table->size(table), 0, "ehht_size");
-	failures +=
-	    check_unsigned_int_m(ehht_buckets_size(table), num_buckets,
-				 "ehht_buckets_size");
 
 	ehht_free(table);
 	return failures;
